Bug 898371 - Enumerate binary structs. r=nsm